--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,10 @@ main .wrapper__section {
   min-width: 300px;
 }
 
+label[for="search-input"] {
+  display: none;
+}
+
 
 .cards-container {
   display: flex;
