--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,16 +65,19 @@ main .wrapper__section {
 
 
 .container {
+  min-height: 500px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   padding: 20px;
   transition: all 0.7s ease;
 }
 
+
 .left-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
@@ -93,7 +96,19 @@ main .wrapper__section {
 }
 
 .right-section input {
-  min-width: 300px;
+  min-width: 50vw;
+}
+
+label:hover {
+  background-color: #3f51b5;
+  color: white;
+}
+
+input[type="checkbox"]:checked + label {
+  background-color: #3f51b5;
+  color: white;
+  padding: 1px;
+  border-radius: 2px;
 }
 
 label[for="search-input"] {
@@ -102,6 +117,11 @@ label[for="search-input"] {
 
 input#search-input {
   margin-left: 1em;
+  text-transform: uppercase;
+}
+
+input#search-input:focus {
+  background-color: rgba(0, 128, 0, 0.363);
 }
 
 .cards-container {
@@ -114,7 +134,7 @@ input#search-input {
   transition: all 0.5s ease-in-out;
 
   min-width: 400px;
-  min-height: 500px;
+  min-height: 400px;
 }
 
 .card {
@@ -164,17 +184,44 @@ input#search-input {
   transition: all .7s ease-in-out;
 }
 
-
-.card button:hover {
-  transform: translate(3px, -3px);
-}
-
 .card .details {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 10px;
+  transition: all .7s ease-in-out;
 }
+
+.card a {
+  transition: all .7s ease-in-out;
+}
+
+.card a:hover {
+  transform: translate(3px, -3px);
+}
+
+.card .details a {
+  color: rgba(0, 0, 0, 0.8);
+  width: 150px;
+  padding: 10px;
+  font-weight: bolder;
+  border: 1px solid rgba(255, 0, 0, 0.6);
+  border-radius: 7px;
+  background-color: rgba(255, 166, 0, 0.6);
+  text-decoration: none;
+  box-shadow: 2px 2px 4px 1px rgba(255, 0, 0, 0.7);
+}
+
+#no-results-message {
+  margin: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 100%;
+  min-height: 300px;
+}
+
 
 .formulario,
 .formulario.label,
@@ -259,10 +306,12 @@ footer .left-footer img {
 
 
 .modal__event__img {
+  margin-top: 50px;
+  margin-right: 10px;
   width: 500px;
-  max-height: 350px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 3px 3px rgba(0, 0, 0, 0.7);
+  max-height: 320px;
+  border-radius: 10px 10px;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.7);
 }
 
 .modal__event__info {
@@ -287,6 +336,10 @@ footer .left-footer img {
 @media (max-width: 600px) {
   .left-section {
     flex-direction: column;
+  }
+
+  .right-section input {
+    min-width: 300px;
   }
 
   .container {
